--- a/views/home.pug
+++ b/views/home.pug
@@ -6,8 +6,9 @@ block content
   hr
   .row
     .col-sm-6
-    h2=data[0]['ASIN']
+    h2=data[0].ASIN
+    img.image(src=data[0].Image, alt="Something is fucked")
     p='This is currently priced at ' + data[0].NewPrice
-    p !{data[0]}
+    p !{data}
     p
       a.btn.btn-default(href='#', role='button') View details »
