--- a/views/home.pug
+++ b/views/home.pug
@@ -8,8 +8,12 @@ block content
     each set in data
       .col-sm-6
       h4=set.ASIN
-      img.image(src=set.Image, alt="Something is fucked")
-      p='Price Now: ' + set.NewPrice
-      p !{data}
+      a(href=set.URL) 
+        img.image(src=set.Image, alt="Something is fucked")
+      a(href=set.URL) 
+        p= ('Price Now: ' + set.NewPrice)
+      p='Price Originally: ' + set.OriginPrice
+      p='Profit: ' + set.Profit
+      p='Return on Investment: ' + set.ROI 
       p
         a.btn.btn-default(href='#', role='button') View details »
