--- a/views/home.pug
+++ b/views/home.pug
@@ -13,7 +13,7 @@ block content
       a(href=set.URL) 
         p= ('Price Now: ' + set.NewPrice)
       p='Price Originally: ' + set.OriginPrice
-      p='Profit: ' + set.Profit
-      p='Return on Investment: ' + set.ROI 
+      p='Profit: $' + set.Profit
+      p='Return on Investment: ' + set.ROI + '%' 
       p
         a.btn.btn-default(href='#', role='button') View details »
