emilee is the best and figured that CHROME CACHES YOUR CSS SO ALL YOUR CHANGES MEAN NOTHING

--- a/views/home.pug
+++ b/views/home.pug
@@ -1,8 +1,9 @@
 extends layout
 
 block content
-  h1 !{title}
-  p.lead A boilerplate for Node.js web applications.
+  .blargle
+    h1 !{title}
+    p.lead A boilerplate for Node.js web applications.
   hr
   .row
     each set in data
