--- a/public/css/main.scss
+++ b/public/css/main.scss
@@ -13,18 +13,8 @@ html {
   min-height: 100%;
 }
 
-body {
-    color: #333;
-    background: #F5F5F5 url(themes/bgd.gif) repeat-y scroll 50% 0;
-    background-size: 100% 100%;
-    font: 62.5% Georgia, "Times New Roman", Times, serif;
-    text-align: center;
-}
-
-container {
-  width: 1000px;
-  margin: 0 auto;
-  padding-top: 30px;
+.blargle {
+  padding-top: 200px;
 }
 
 footer {
