--- a/views/home.pug
+++ b/views/home.pug
@@ -9,7 +9,11 @@ block content
 
   div.grid
     div(class="grid-item grid-item--sidebar")
-      img.image(src="/assets/logo.PNG", alt="Snazz Industries")
+      img.image(class="story-img", src="/assets/logo.PNG", alt="Snazz Industries")
+    div(class="grid-item grid-item--story")
+      h2="Best Lego Investments in the Past 5 Years"
+      img.image(class="story-img", src="/assets/test.jpg", alt="Snazz Industries")
+      p="Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."
     each set in data
       div(class="grid-item grid-item--story")
         h4=set.ASIN
