--- a/templates/views/index.pug
+++ b/templates/views/index.pug
@@ -2,33 +2,18 @@ extends ../layouts/default
 
 include ../mixins/article
 block content
-    div(style="padding-left: 5vw; padding-right: 5vw;").jumbotron
+    div(style="text-align: center;")
         h1 Snazz Industries
         .lead Lego Arbitrage and Lego Reselling: How to make money with Lego
+        hr
+        h5 #{moment(Date.now()).format('LL')}
+        hr(style="border-top: 3px solid #eee;")
             
     .row
         .col-sm-8
             .blog
                 each post in posts.results
                     +article(post)
-            h3: a(href='/blog') Blog
-            //- p Simple example blog with posts and categories.
-            p Posts have a key automatically generated from their name, and support short and extended versions of the content.
-            p You can sign in using the demo account to contribute to the blog.
-            hr
-            h3: a(href='/gallery') Gallery
-            p Example of how to set up a page that displays multiple image galleries.
-            p Demonstrates usage of single and multi image fields and their resizing methods.
-            p You can sign in using the demo account to create and manage image galleries, and upload additional images
-            hr
-            h3: a(href='/contact') Enquiries
-            p Simple contact form that validates input and logs enquiries to the database.
-            p You can sign in using the demo account to view the submitted enquiries.
-            hr
-            h3 Generating CSVs
-            p For an example of how to download a list in .csv format, see /routes/download/users.js.
-            p It uses the excellent node-csv library.
-            a(href='/download/users').btn.btn-default Download users.csv
         .col-sm-4
             .panel.panel-default
                 .panel-heading
@@ -56,3 +41,9 @@ block content
                         a(href='/keystone/signout').btn.btn-link Sign out
                     else
                         a(href='/keystone/signin').btn.btn-default Sign in
+            .panel.panel-default
+                .panel-heading
+                    h3.panel-title: a(href='/contact') Contact Us
+                .panel-body
+                    p Want to write an article for our blog? Have specific questions about a particular Lego investment? Need to find a bunch of rare minifigs? We welcome any and all questions/comments!
+                    a(href='/contact').btn.btn-default Contact Us
