removed gallery and theme pickers, modified article layout slightly

--- a/public/styles/site/layout.less
+++ b/public/styles/site/layout.less
@@ -2,6 +2,10 @@
 // Layout
 // ==============================
 
+.centerImg {
+	display: block;
+	margin: 0 auto;
+}
 
 // Header
 // ------------------------------
